--- a/index.html
+++ b/index.html
@@ -37,6 +37,34 @@
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
 		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 	<![endif]-->
+
+   <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.19.0/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+	<script src="https://www.gstatic.com/firebasejs/7.19.0/firebase-analytics.js"></script>
+
+	<script>
+	// Your web app's Firebase configuration
+		var firebaseConfig = {
+			apiKey: "AIzaSyBMYtktWPpOwlrS5oV707KM7AMnIOIpPnc",
+			authDomain: "artic-solutions-e4ec2.firebaseapp.com",
+			databaseURL: "https://artic-solutions-e4ec2.firebaseio.com",
+			projectId: "artic-solutions-e4ec2",
+			storageBucket: "artic-solutions-e4ec2.appspot.com",
+			messagingSenderId: "712480448106",
+			appId: "1:712480448106:web:8f95cd44999cd78fb5f413",
+			measurementId: "G-KEF6P1Q66Q"
+		};
+		// Initialize Firebase
+		firebase.initializeApp(firebaseConfig);
+		firebase.analytics();
+	</script>
+	<script src="https://www.gstatic.com/firebasejs/7.18.0/firebase-firestore.js"></script>
+
+	
+
 </head>
 
 <body>
@@ -357,12 +385,13 @@
 
 				<!-- contact form -->
 				<div class="col-md-8 col-md-offset-2">
-					<form class="contact-form">
-						<input type="text" class="input" placeholder="Nombre">
-						<input type="email" class="input" placeholder="Email">
-						<input type="text" class="input" placeholder="Asunto">
-						<textarea class="input" placeholder="Mensaje"></textarea>
-						<button class="main-btn">Envíar Mensaje</button>
+					<form id="form" class="contact-form">
+						<input type="text"  id="name" class="input" placeholder="Nombre">
+						<input type="email" id="email" class="input" placeholder="Email">
+						<input type="text" id="affair" class="input" placeholder="Asunto">
+						<textarea class="input" id="message" placeholder="Escribe tu mensaje. Comentanos cuál es tu tipo de negocio y qué te gustaría hacer."></textarea>
+						<h5 class="text-center">*Debe rellenar todos los campos del formulario para continuar*</h5>
+						<button class="main-btn" id="btn-submit">Envíar Mensaje</button>
 					</form>
 				</div>
 				<!-- /contact form -->
@@ -423,7 +452,23 @@
 
 	</footer>
 	<!-- /Footer -->
-
+	<div id="modal_success" class="modal fade" role="dialog">
+		<div class="modal-dialog">
+		  <!-- Contenido del modal -->
+		  <div class="modal-content">
+			
+			<div class="modal-body">
+				<br>
+				<h3 class="text-center">Su mensaje ha sido enviado correctamente</h3>
+				<h3 class="text-center">Muy pronto nuestro equipo se pondrá en contacto con usted</h3>
+				<h3 class="text-center">Muchas Gracias!</h3>
+			</div>
+			<div class="modal-footer">
+			  <button type="button" class="main-btn" data-dismiss="modal">Cerrar</button>
+			</div>
+		  </div>
+		</div>
+	</div>
 	<!-- Back to top -->
 	<div id="back-to-top"></div>
 	<!-- /Back to top -->
@@ -445,6 +490,7 @@
 	<script type="text/javascript" src="js/owl.carousel.min.js"></script>
 	<script type="text/javascript" src="js/jquery.magnific-popup.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
+	<script src="js/firebase.js"></script>
 
 </body>
 
