--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
 	<title>Artic Solutions - Bienvenido</title>
+	<meta name="description" content="Te damos la bienvenida a un mundo lleno de posibilidades.
+	Somos Artic Techical Solutions. Creamos soluciones web para empresas, Sistema de gestión, Apps, Paginas web, Estrategia Digital, Community manager y más" />
+	<meta name="keywords" content="Building Networks" />
+	<meta name="author" content="Artic Solutions">
 	<link rel="shortcut icon" type="img/jpg" href="img/favicon.png"/>
 
 	<link rel="stylesheet" href="css/color.css">
